# screen-record

./: .gitignore  Makefile  README.md  pyproject.toml
data/: io.github.screencast-recorder.desktop
screencast_recorder/: __init__.py  __main__.py  audio.py  cli.py  cmd.py  config.py  display.py  encoders.py  gui.py  gui_recording.py  gui_region_picker.py  gui_settings.py  gui_window.py  gui_window_picker.py  helpers.py  launcher.sh  recorder.py  region.py  toggle.sh  webcam.py  windows.py
